hphp/test/zend/bad/ext-gd/001.php
<?php

$file = dirname(__FILE__)."/001.test";
@unlink($file);

var_dump(imagecreatefrompng($file));
touch($file);
var_dump(imagecreatefrompng($file));

@unlink($file);

echo "Done\n";
?>